--- a/src/june2025.css
+++ b/src/june2025.css
@@ -271,11 +271,11 @@
 
   .headerPhotoJune2025 {
     margin-top: -20%;
-    -webkit-transform: scale(1.9, 0.5);
-    -moz-transform: scale(1.9, 0.5);
-    -ms-transform: scale(1.9, 0.5);
-    -o-transform: scale(1.9, 0.5);
-    transform: scale(1.9, 0.5);
+    -webkit-transform: scale(1.9);
+    -moz-transform: scale(1.9);
+    -ms-transform: scale(1.9);
+    -o-transform: scale(1.9);
+    transform: scale(1.9);
   }
 
   .monthHeaderJune2025 {
@@ -287,11 +287,11 @@
     width: 400px;
     height: 200px;
     margin: 50px auto 0;
-    -webkit-transform: translate(0%, -320%) scale(0.7);
-    -moz-transform: translate(0%, -320%) scale(0.7);
-    -ms-transform: translate(0%, -320%) scale(0.7);
-    -o-transform: translate(0%, -320%) scale(0.7);
-    transform: translate(0%, -320%) scale(0.7);
+    -webkit-transform: translate(0%, -90%) scale(0.9);
+    -moz-transform: translate(0%, -90%) scale(0.9);
+    -ms-transform: translate(0%, -90%) scale(0.9);
+    -o-transform: translate(0%, -90%) scale(0.9);
+    transform: translate(0%, -90%) scale(0.9);
   }
 
   @keyframes move-animation {
@@ -350,11 +350,11 @@
   .headerPhotoJune2025 {
     margin-top: -50%;
     width: 100vh;
-    -webkit-transform: scaleY(0.4);
-    -moz-transform: scaleY(0.4);
-    -ms-transform: scaleY(0.4);
-    -o-transform: scaleY(0.4);
-    transform: scaleY(0.4);
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
   }
 
   .monthHeaderJune2025 {
@@ -366,11 +366,11 @@
     width: 400px;
     height: 200px;
     margin: 50px auto 0;
-    -webkit-transform: translate(0%, -400%) scale(0.6);
-    -moz-transform: translate(0%, -400%) scale(0.6);
-    -ms-transform: translate(0%, -400%) scale(0.6);
-    -o-transform: translate(0%, -400%) scale(0.6);
-    transform: translate(0%, -400%) scale(0.6);
+    -webkit-transform: translate(0%, -250%) scale(0.7);
+    -moz-transform: translate(0%, -250%) scale(0.7);
+    -ms-transform: translate(0%, -250%) scale(0.7);
+    -o-transform: translate(0%, -250%) scale(0.7);
+    transform: translate(0%, -250%) scale(0.7);
   }
 
   @keyframes move-animation {
@@ -443,11 +443,11 @@
     width: 400px;
     height: 200px;
     margin: 50px auto 0;
-    -webkit-transform: translate(0%, -280%) scale(0.5);
-    -moz-transform: translate(0%, -280%) scale(0.5);
-    -ms-transform: translate(0%, -280%) scale(0.5);
-    -o-transform: translate(0%, -280%) scale(0.5);
-    transform: translate(0%, -280%) scale(0.5);
+    -webkit-transform: translate(0%, -260%) scale(0.4);
+    -moz-transform: translate(0%, -260%) scale(0.4);
+    -ms-transform: translate(0%, -260%) scale(0.4);
+    -o-transform: translate(0%, -260%) scale(0.4);
+    transform: translate(0%, -260%) scale(0.4);
   }
 
   @keyframes move-animation {
@@ -482,11 +482,11 @@
     width: 400px;
     height: 200px;
     margin: 50px auto 0;
-    -webkit-transform: translate(0%, -260%) scale(0.5);
-    -moz-transform: translate(0%, -260%) scale(0.5);
-    -ms-transform: translate(0%, -260%) scale(0.5);
-    -o-transform: translate(0%, -260%) scale(0.5);
-    transform: translate(0%, -260%) scale(0.5);
+    -webkit-transform: translate(0%, -220%) scale(0.4);
+    -moz-transform: translate(0%, -220%) scale(0.4);
+    -ms-transform: translate(0%, -220%) scale(0.4);
+    -o-transform: translate(0%, -220%) scale(0.4);
+    transform: translate(0%, -220%) scale(0.4);
   }
 
   @keyframes move-animation {
