--- a/src/june2025.css
+++ b/src/june2025.css
@@ -178,7 +178,7 @@
   color: #22311d;
   border: solid 3px #22311d;
   background-color: #cbbd93;
-  text-align: left;
+  text-align: center;
   padding: 10px 10px 20px 10px;
   margin: 3%;
   font-size: 1.1rem;
@@ -205,9 +205,9 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 65%;
   height: auto;
-  border: solid #22311d 4px;
+  border: solid #22311d 3px;
   -webkit-border-radius: 20%;
   -moz-border-radius: 20%;
   -ms-border-radius: 20%;
