--- a/src/june2025.css
+++ b/src/june2025.css
@@ -287,11 +287,11 @@
     width: 400px;
     height: 200px;
     margin: 50px auto 0;
-    -webkit-transform: translate(0%, -90%) scale(0.9);
-    -moz-transform: translate(0%, -90%) scale(0.9);
-    -ms-transform: translate(0%, -90%) scale(0.9);
-    -o-transform: translate(0%, -90%) scale(0.9);
-    transform: translate(0%, -90%) scale(0.9);
+    -webkit-transform: translate(0%, -90%) scale(1.3);
+    -moz-transform: translate(0%, -90%) scale(1.3);
+    -ms-transform: translate(0%, -90%) scale(1.3);
+    -o-transform: translate(0%, -90%) scale(1.3);
+    transform: translate(0%, -90%) scale(1.3);
   }
 
   @keyframes move-animation {
@@ -362,6 +362,11 @@
     margin-bottom: 10%;
   }
 
+  .blogPhotoDivJune2025 {
+    display: flex;
+    flex-direction: column;
+  }
+
   .catWalking {
     width: 400px;
     height: 200px;
@@ -398,6 +403,11 @@
   .monthHeaderJune2025 {
     margin-top: 10%;
     margin-bottom: 10%;
+  }
+
+  .blogPhotoDivJune2025 {
+    display: flex;
+    flex-direction: column;
   }
 
   .catWalking {
@@ -439,6 +449,11 @@
     margin-bottom: 15%;
   }
 
+  .blogPhotoDivJune2025 {
+    display: flex;
+    flex-direction: column;
+  }
+
   .catWalking {
     width: 400px;
     height: 200px;
@@ -476,6 +491,11 @@
   .monthHeaderJune2025 {
     margin-top: 15%;
     margin-bottom: 15%;
+  }
+
+  .blogPhotoDivJune2025 {
+    display: flex;
+    flex-direction: column;
   }
 
   .catWalking {
