--- a/src/june2025.css
+++ b/src/june2025.css
@@ -164,8 +164,8 @@
   background-color: #cbbd93;
   text-align: center;
   padding: 10px 3% 20px 30px;
-  margin-top: 3%;
-  margin-bottom: 5px;
+  margin-top: 2%;
+  margin-bottom: 1%;
   margin-left: auto;
   margin-right: auto;
   font-size: 1.2rem;
@@ -179,7 +179,7 @@
   background-color: #cbbd93;
   text-align: center;
   padding: 10px 10px 20px 10px;
-  margin: 3%;
+  margin: 1%;
   font-size: 1.1rem;
   font-weight: bold;
   font-family: Calibri, Trebuchet MS, sans-serif;
@@ -225,6 +225,7 @@
 }
 
 .slideshowinstructionsJune2025 {
+  text-align: center;
   margin-top: 1%;
   margin-bottom: 1%;
   font-size: 1.1rem;
@@ -232,6 +233,7 @@
   display: block;
   color: #22311d;
   background-color: #cbbd93;
+  padding: 3%;
 }
 
 .slideshowentryJune2025 {
@@ -240,15 +242,15 @@
   margin-right: auto;
   pointer-events: none;
   height: auto;
-  width: 70%;
+  width: 30%;
   border: solid #22311d 4px;
-  margin-top: 1%;
+  margin-top: 2%;
   margin-bottom: 1%;
-  -webkit-border-radius: 70%;
-  -moz-border-radius: 70%;
-  -ms-border-radius: 70%;
-  -o-border-radius: 70%;
-  border-radius: 70%;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+  border-radius: 20%;
 }
 
 .SlideshowHostPhotoJune2025 {
@@ -257,7 +259,7 @@
   border: solid 3px #22311d;
   background-color: #cbbd93;
   padding-bottom: 2%;
-  padding-top: 2%;
+  /* padding-top: 1%; */
   margin-right: auto;
   margin-left: auto;
   justify-content: center;
@@ -366,6 +368,11 @@
     flex-direction: column;
   }
 
+  .slideshowentryJune2025 {
+    width: 50%;
+    margin-top: 12%;
+  }
+
   .catWalking {
     width: 400px;
     height: 200px;
@@ -407,6 +414,11 @@
   .blogPhotoDivJune2025 {
     display: flex;
     flex-direction: column;
+  }
+
+  .slideshowentryJune2025 {
+    width: 70%;
+    margin-top: 12%;
   }
 
   .catWalking {
@@ -453,6 +465,11 @@
     flex-direction: column;
   }
 
+  .slideshowentryJune2025 {
+    width: 70%;
+    margin-top: 12%;
+  }
+
   .catWalking {
     width: 400px;
     height: 200px;
@@ -495,6 +512,11 @@
   .blogPhotoDivJune2025 {
     display: flex;
     flex-direction: column;
+  }
+
+  .slideshowentryJune2025 {
+    width: 70%;
+    margin-top: 12%;
   }
 
   .catWalking {
