--- a/src/july2025.css
+++ b/src/july2025.css
@@ -76,15 +76,31 @@
 }
 
 .dateJuly2025 {
-  color: whitesmoke;
+  color: #22311d;
   border: solid 3px #22311d;
   background-color: #869f77;
   text-align: center;
   padding: 10px 10px 10px 10px;
-  margin: 5px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 1.2rem;
   font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
+}
+
+.newsHeaderJuly2025V1 {
+  color: #22311d;
+  border: solid 3px #22311d;
+  background-color: #869f77;
+  text-align: center;
+  padding: 10px 3% 20px 30px;
+  margin-top: 40%;
+  margin-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: Calibri, Trebuchet MS, sans-serif;
 }
 
 .newsHeaderJuly2025 {
@@ -93,7 +109,7 @@
   background-color: #869f77;
   text-align: center;
   padding: 10px 3% 20px 30px;
-  margin-top: 53%;
+  margin-top: 3%;
   margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
