--- a/src/july2025.css
+++ b/src/july2025.css
@@ -215,6 +215,16 @@
   .july2025Header {
     height: 28vh;
   }
+
+  .newsJuly2025 {
+    padding: 10px 10px 40px 10px;
+  }
+
+  .blogPhotoDivJuly2025 {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10%;
+  }
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -223,6 +233,16 @@
   .july2025Header {
     height: 23vh;
   }
+
+  .newsJuly2025 {
+    padding: 10px 10px 40px 10px;
+  }
+
+  .blogPhotoDivJuly2025 {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20%;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -230,5 +250,15 @@
   of the site are displayed with the best dimensions for the smaller devices (This includes Bernard's and certain other mobile devices)*/
   .july2025Header {
     height: 23vh;
+  }
+
+  .blogPhotoDivJuly2025 {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20%;
+  }
+
+  .newsJuly2025 {
+    padding: 10px 10px 40px 10px;
   }
 }
