--- a/src/july2025.css
+++ b/src/july2025.css
@@ -6,7 +6,7 @@
   font-weight: bold;
   border: solid 3px;
   width: 100vw;
-  height: 53vh;
+  height: 43vh;
   background: #c0b9bf;
   position: absolute;
 }
@@ -22,6 +22,7 @@
   /*This is the coloring and underlining for hyperlinks in the main body of the text */
   text-decoration: underline;
   color: #ff1d8d;
+  font-weight: bold;
 }
 
 #backbuttonJuly2025 {
@@ -53,7 +54,7 @@
   background-repeat: repeat round;
   width: 100%;
   height: 100%;
-  border: solid #869f77 8px;
+  border: solid #588061 8px;
 }
 
 .backgroundColorJuly2025 {
@@ -78,7 +79,7 @@
 .dateJuly2025 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #869f77;
+  background-color: #588061;
   text-align: center;
   padding: 10px 10px 10px 10px;
   margin-left: auto;
@@ -91,7 +92,7 @@
 .newsHeaderJuly2025V1 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #869f77;
+  background-color: #588061;
   text-align: center;
   padding: 10px 3% 20px 30px;
   margin-top: 40%;
@@ -106,7 +107,7 @@
 .newsHeaderJuly2025 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #869f77;
+  background-color: #588061;
   text-align: center;
   padding: 10px 3% 20px 30px;
   margin-top: 3%;
@@ -121,12 +122,12 @@
 .newsJuly2025 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #869f77;
-  text-align: center;
+  background-color: #588061;
+  text-align: left;
   padding: 10px 10px 20px 10px;
   margin: 3%;
-  font-size: 1.1rem;
-  font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: normal;
   font-family: Calibri, Trebuchet MS, sans-serif;
   padding: 3%;
 }
@@ -135,7 +136,7 @@
   display: flex;
   flex-direction: row;
   border: solid 2px #22311d;
-  background-color: #869f77;
+  background-color: #588061;
   padding-bottom: 2%;
   padding-top: 3%;
   padding-left: 2%;
@@ -176,7 +177,7 @@
   font-family: Calibri, Trebuchet MS, sans-serif;
   display: block;
   color: #22311d;
-  background-color: #869f77;
+  background-color: #588061;
 }
 
 .slideshowentryJuly2025 {
@@ -185,7 +186,7 @@
   margin-right: auto;
   pointer-events: none;
   height: auto;
-  width: 70%;
+  width: 55%;
   border: solid #22311d 4px;
   margin-top: 1%;
   margin-bottom: 1%;
@@ -200,7 +201,7 @@
   display: flex;
   flex-direction: column;
   border: solid 3px #22311d;
-  background-color: #869f77;
+  background-color: #588061;
   padding-bottom: 2%;
   padding-top: 2%;
   margin-right: auto;
@@ -213,7 +214,7 @@
   /*To ensure on mobile screens between 769px and 1000px width that relevant components 
   of the site are displayed with the best dimensions for the smaller devices (This includes Bernard's and certain other mobile devices)*/
   .july2025Header {
-    height: 28vh;
+    height: 21vh;
   }
 
   .newsJuly2025 {
@@ -249,7 +250,7 @@
   /*To ensure on mobile screens between 320px and 480px width that relevant components 
   of the site are displayed with the best dimensions for the smaller devices (This includes Bernard's and certain other mobile devices)*/
   .july2025Header {
-    height: 23vh;
+    height: 15vh;
   }
 
   .blogPhotoDivJuly2025 {
@@ -260,5 +261,15 @@
 
   .newsJuly2025 {
     padding: 10px 10px 40px 10px;
+  }
+
+  .blogPhotoDivJuly2025 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .slideshowentryJuly2025 {
+    width: 70%;
+    margin-top: 12%;
   }
 }
