--- a/src/july2025.css
+++ b/src/july2025.css
@@ -82,8 +82,10 @@
   background-color: #588061;
   text-align: center;
   padding: 10px 10px 10px 10px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0%;
+  margin-right: 0%;
+  margin-top: 5%;
+  margin-bottom: 0%;
   font-size: 1.2rem;
   font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
@@ -97,8 +99,8 @@
   padding: 10px 3% 20px 30px;
   margin-top: 40%;
   margin-bottom: 5px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0%;
+  margin-right: 0%;
   font-size: 1.2rem;
   font-weight: bold;
   font-family: Calibri, Trebuchet MS, sans-serif;
@@ -186,7 +188,7 @@
   margin-right: auto;
   pointer-events: none;
   height: auto;
-  width: 55%;
+  width: 70%;
   border: solid #22311d 4px;
   margin-top: 1%;
   margin-bottom: 1%;
