--- a/src/july2025.css
+++ b/src/july2025.css
@@ -21,7 +21,7 @@
 .linkJuly2025 {
   /*This is the coloring and underlining for hyperlinks in the main body of the text */
   text-decoration: underline;
-  color: #ff1d8d;
+  color: #d00067;
   font-weight: bold;
 }
 
@@ -79,7 +79,7 @@
 .dateJuly2025 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
   text-align: center;
   padding: 10px 10px 10px 10px;
   margin-left: 0%;
@@ -94,7 +94,7 @@
 .newsHeaderJuly2025V1 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
   text-align: center;
   padding: 10px 3% 20px 30px;
   margin-top: 40%;
@@ -109,7 +109,7 @@
 .newsHeaderJuly2025 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
   text-align: center;
   padding: 10px 3% 20px 30px;
   margin-top: 3%;
@@ -124,7 +124,7 @@
 .newsJuly2025 {
   color: #22311d;
   border: solid 3px #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
   text-align: left;
   padding: 10px 10px 20px 10px;
   margin: 3%;
@@ -138,7 +138,7 @@
   display: flex;
   flex-direction: row;
   border: solid 2px #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
   padding-bottom: 2%;
   padding-top: 3%;
   padding-left: 2%;
@@ -179,7 +179,7 @@
   font-family: Calibri, Trebuchet MS, sans-serif;
   display: block;
   color: #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
 }
 
 .slideshowentryJuly2025 {
@@ -203,7 +203,7 @@
   display: flex;
   flex-direction: column;
   border: solid 3px #22311d;
-  background-color: #588061;
+  background-color: #99b19d;
   padding-bottom: 2%;
   padding-top: 2%;
   margin-right: auto;
